--- a/mini-project-2/pom.xml
+++ b/mini-project-2/pom.xml
@@ -51,7 +51,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>org.library.Main</mainClass>
+                    <mainClass>org.AdrianOraya.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
